{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "UI",
            "id": "e370667c-adf1-4350-8762-c2984051093d",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "dd675dc7-cc23-4625-bf2e-8c84151ebc80",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Stats",
                    "type": "Button",
                    "id": "ad92cefe-6eda-4489-87b6-7d007ba32c10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DevMenu",
                    "type": "Button",
                    "id": "a7689595-d822-406d-9f68-cce13f5117a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3f3d6b27-98b2-4811-9d9c-a63222594ca5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2efdd673-6a23-477c-aac0-f56572dc5021",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stats",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9cea857a-75ba-4836-9201-77e8c2e01438",
                    "path": "<Keyboard>/f12",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DevMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Movement",
            "id": "4baec9b9-af9f-470f-9bfa-7ad312b0dda3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "64916ce9-51b7-4702-81e6-78130ca90dab",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "801770dc-b344-4d34-b5fb-11d7f99aec11",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5ee62c06-613d-4dd7-87e0-b889fe082aef",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "512b462b-9ac9-42b8-bbb7-1c1aef6c8b90",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4fb8eb20-f7a0-4043-9623-f673d1588e52",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e3d6d89f-13b3-4d3b-8a32-2e5cf210cb61",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Attack",
            "id": "ecd3c57c-7e2a-423b-8e91-73fbde36dcaf",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "a0da3609-306a-466a-b3b0-3e2046d35339",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d2b0659d-249c-4afd-9edc-66e08d63296c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Abilities",
            "id": "5eb5c655-c303-4580-a0c9-6bc637eabc67",
            "actions": [
                {
                    "name": "AbilityA",
                    "type": "Button",
                    "id": "32c61750-2bbc-484c-95e1-091175c7618a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityB",
                    "type": "Button",
                    "id": "6f99efdd-fcc2-4c44-a4e2-fdbbec8e1411",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityC",
                    "type": "Button",
                    "id": "de9371d1-a996-4b2d-888b-124053a765ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e3658b06-86b6-4960-a0af-710a27a76fd1",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "877ac43d-14bb-4698-8672-268250bf55fb",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0497f29-91e6-480b-9a0f-552b9f423726",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityC",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Conversations",
            "id": "bf731363-53f1-4552-a35e-fb958022b6f6",
            "actions": [
                {
                    "name": "Skip",
                    "type": "Button",
                    "id": "b76053ea-39a6-4779-aa02-f587d9ad29d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0c65f1e6-33b1-403d-9bff-2301809e92db",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}